<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group1">

        <item
            android:id="@+id/searchMedicineNav"
            android:icon="@mipmap/ic_launcher_round"
            android:title="@string/search_buy_medicines" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/orderWithPrescriptionNav"
            android:icon="@mipmap/ic_launcher_round"
            android:title="@string/order_with_prescription" />
    </group>

    <group android:id="@+id/group3">
        <item
            android:id="@+id/otcWellnessNav"
            android:icon="@mipmap/ic_launcher_round"
            android:title="@string/otc_wellness" />
    </group>

    <group android:id="@+id/group4">
        <item
            android:id="@+id/myOrdersNav"
            android:icon="@mipmap/ic_launcher_round"
            android:title="@string/my_orders" />
    </group>

</menu>
