<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shadow"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/_16dp"
        android:text="@string/profile_photo"
        android:textColor="@color/colorWhite" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/dialog_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_16dp"
        android:text="@string/gallery" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/dialog_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_16dp"
        android:text="@string/camera" />

</LinearLayout>