<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundWhite"
    android:orientation="vertical"
    tools:context=".activity.PrescriptionOrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPlaceOrder"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/app_bar_common" />

            <CheckBox
                android:layout_margin="@dimen/_8dp"
                android:id="@+id/cbSOD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow"
                android:padding="@dimen/_8dp"
                android:text="@string/show_on_delivery" />

            <!-- Order with Prescription -->
            <RelativeLayout
                android:id="@+id/attachedPrescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:background="@drawable/shadow"
                android:orientation="vertical"
                android:padding="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/tvAddPrescription"
                    android:padding="@dimen/_8dp"
                    android:text="@string/prescription_details"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView
                    android:id="@+id/tvAddPrescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:onClick="addPrescription"
                    app:cardBackgroundColor="@color/colorAccent">

                    <TextView
                        style="@style/Base.CardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:padding="@dimen/_8dp"
                        android:text="@string/add_prescription"
                        android:textColor="@color/colorWhite" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvPrescriptionPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvAddPrescription"
                    android:layout_marginTop="@dimen/_4dp"
                    android:padding="@dimen/_4dp"
                    app:stackFromEnd="true" />
            </RelativeLayout>

            <!-- Show on delivery -->
            <RelativeLayout
                android:id="@+id/attachedMedicineLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:background="@drawable/shadow"
                android:padding="@dimen/_8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/tvAddMedicine"
                    android:padding="@dimen/_8dp"
                    android:text="@string/medicine_details"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView
                    android:id="@+id/tvAddMedicine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:onClick="addMedicine">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@color/colorAccent"
                        android:padding="@dimen/_8dp"
                        android:text="@string/add_medicine"
                        android:textColor="@color/colorWhite" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvMedicineList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvAddMedicine"
                    android:layout_marginTop="@dimen/_4dp"
                    app:stackFromEnd="true" />
            </RelativeLayout>

            <!-- Address -->
            <RelativeLayout
                android:id="@+id/attachedAddressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:background="@drawable/shadow"
                android:padding="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/tvChangeAddress"
                    android:padding="@dimen/_8dp"
                    android:text="@string/address_details"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView
                    android:id="@+id/tvChangeAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:onClick="changeAddress"
                    app:cardBackgroundColor="@color/colorAccent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@color/colorAccent"
                        android:padding="@dimen/_8dp"
                        android:text="@string/change_address"
                        android:textColor="@color/colorWhite" />
                </android.support.v7.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvChangeAddress"
                    android:layout_marginTop="@dimen/_4dp">

                    <RadioButton
                        android:id="@+id/rbAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true" />

                    <TextView
                        android:id="@+id/tvChosenAddressPlace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_4dp"
                        android:layout_toEndOf="@id/rbAddress"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvChosenAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvChosenAddressPlace"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_4dp"
                        android:layout_toEndOf="@+id/rbAddress" />
                </RelativeLayout>

            </RelativeLayout>

            <RadioGroup
                android:id="@+id/attachedPrescriptionTypeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:background="@drawable/shadow"
                android:padding="@dimen/_8dp">

                <RadioButton
                    android:id="@+id/rbOrderAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_everything_as_per_prescription" />

                <RadioButton
                    android:id="@+id/rbOrderSpecify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/let_me_specify_medicines_quantity" />

                <LinearLayout
                    android:id="@+id/medSpecifyLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16dp">

                        <EditText
                            android:id="@+id/etMedSpecify"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/medicine_s_name_quantity_duration"
                            android:inputType="textCapWords|textMultiLine"
                            android:textSize="@dimen/_12sp" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20dp"
                        android:text="@string/e_g_crocin_2_strips"
                        android:textSize="@dimen/_10sp" />
                </LinearLayout>

                <RadioButton
                    android:id="@+id/rbOrderCall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/call_me_for_details" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_4dp"
        android:onClick="confirmOrder"
        android:text="@string/confirm_order"
        android:textColor="@color/colorWhite"
        android:theme="@style/AppTheme.Button" />

</RelativeLayout>