<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        android:background="@drawable/shadow"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="@dimen/_0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_8dp"
                android:layout_weight="0.2"
                android:fontFamily="sans-serif"
                android:gravity="center|end"
                android:text="@string/_ind_country_code"
                android:textSize="@dimen/_14sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/_0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.8">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/inputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textSize="@dimen/_14sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/_14sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:fontFamily="sans-serif"
            android:padding="@dimen/_10dp"
            android:text="@string/forgot_password"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginTop="-25dp"
        android:src="@drawable/ic_next_24dp"
        app:backgroundTint="@color/colorAccent" />
</LinearLayout>