<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Important notes-->
        <TextView
            android:id="@+id/tvImpNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8dp"
            android:visibility="gone" />

        <!-- Carousel -->
        <android.support.v7.widget.CardView
            android:id="@+id/carouselContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100dp"
            android:layout_margin="@dimen/_4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4dp">
                <!--Image slider-->
                <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/imgSlider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.daimajia.slider.library.Indicators.PagerIndicator
                    android:id="@+id/customIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgSlider"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:gravity="center"
                    app:selected_color="@color/colorWhite"
                    app:unselected_color="@color/colorPrimaryDark" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!-- Social App Business -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <android.support.v7.widget.CardView
                android:id="@+id/callCard"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:layout_weight="1"
                android:onClick="call">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8dp"
                    android:src="@drawable/call_logo" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:layout_weight="1"
                android:onClick="sms">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8dp"
                    android:src="@drawable/sms_logo" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:layout_weight="1"
                android:onClick="mail">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8dp"
                    android:src="@drawable/mail_logo" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/whatsappCard"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:layout_weight="1"
                android:onClick="whatsapp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8dp"
                    android:src="@drawable/whatsapp_logo" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <!-- Order with prescription-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:onClick="prescriptionOrder">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/btnOrderWithPrescription"
                    android:drawablePadding="@dimen/_8dp"
                    android:drawableStart="@drawable/ic_sample"
                    android:fontFamily="sans-serif"
                    android:gravity="start|center"
                    android:padding="@dimen/_4dp"
                    android:text="@string/order_with_prescription"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_16sp" />

                <TextView
                    android:id="@+id/btnOrderWithPrescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@color/colorAccent"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:minWidth="@dimen/_75dp"
                    android:padding="@dimen/_8dp"
                    android:text="@string/upload"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
